# rust-passphrase

./: Cargo.toml  LICENSE  Makefile  README.md  cli.yml  shell.nix
src/: main.rs
src/dict/: mod.rs
