[package]
authors = ["Peter Neuroth <pet.v.ne@gmail.com>"]
edition = "2018"
name = "rust-password-gen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
clap = { version = "2.33.3", features = ["yaml"] }
toml = "0.5.8"